Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -402,6 +402,7 @@
     "customers": "Clients",
     "customize": "Personalitzar",
     "daily": "Diari",
+    "daily-executions": "Ejecuciones diarias",
     "dasboard-backup-li1": "Si esborreu o desinstal·leu FacturaScripts, perdreu les dades.",
     "dasboard-backup-li2": "Si esborreu o desinstal·leu XAMPP, perdreu les dades.",
     "dasboard-backup-li3": "Si perd, formateja o destrueix el PC, perd les dades.",
