--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -402,6 +402,7 @@
     "customers": "Clientes",
     "customize": "Personalizar",
     "daily": "Diario",
+    "daily-executions": "Ejecuciones diarias",
     "dasboard-backup-li1": "Pokud smažete nebo odinstalujete FakturaScripty, ztratíte data.",
     "dasboard-backup-li2": "Pokud smažete nebo odinstalujete XAMPP, ztratíte data.",
     "dasboard-backup-li3": "Pokud ztratíte, formátujete nebo zničíte počítač, ztratíte data.",
