--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -402,6 +402,7 @@
     "customers": "Kunden",
     "customize": "Personalisieren",
     "daily": "Täglich",
+    "daily-executions": "Ejecuciones diarias",
     "dasboard-backup-li1": "Wenn Sie FacturaScripts löschen oder deinstallieren, verlieren Sie die Daten.",
     "dasboard-backup-li2": "Wenn Sie XAMPP löschen oder deinstallieren, verlieren Sie die Daten.",
     "dasboard-backup-li3": "Wenn Sie den PC verlieren, formatieren oder zerstören, verlieren Sie die Daten.",
