--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -402,6 +402,7 @@
     "customers": "Customers",
     "customize": "Customize",
     "daily": "Daily",
+    "daily-executions": "Daily Executions",
     "dasboard-backup-li1": "If you delete or uninstall FacturaScripts, you lose the data.",
     "dasboard-backup-li2": "If you delete or uninstall XAMPP, you lose the data.",
     "dasboard-backup-li3": "If you lose, format or destroy the PC, you lose the data.",
