--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -402,6 +402,7 @@
     "customers": "Bezeroak",
     "customize": "Pertsonalizatu",
     "daily": "Egunero",
+    "daily-executions": "Ejecuciones diarias",
     "dasboard-backup-li1": "FacturaScripts ezabatzen edo desinstalatzen baduzu, datuak galduko dituzu.",
     "dasboard-backup-li2": "XAMPP ezabatzen edo desinstalatzen baduzu, datuak galduko dituzu.",
     "dasboard-backup-li3": "PCa galdu, formateatu edo suntsitzen baduzu, datuak galduko dituzu.",
