--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -402,6 +402,7 @@
     "customers": "Clientes",
     "customize": "Personalizar",
     "daily": "Diario",
+    "daily-executions": "Ejecuciones diarias",
     "dasboard-backup-li1": "Si borra o desinstala FacturaScripts, pierde los datos.",
     "dasboard-backup-li2": "Se borra ou desinstala XAMPP, perde os datos.",
     "dasboard-backup-li3": "Se perde, formata ou destrúe o PC, perde os datos.",
