--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -402,6 +402,7 @@
     "customers": "Klienci",
     "customize": "Dostosować",
     "daily": "Codziennie",
+    "daily-executions": "Ejecuciones diarias",
     "dasboard-backup-li1": "Jeśli usuniesz lub odinstalujesz FacturaScripts, stracisz dane.",
     "dasboard-backup-li2": "Jeśli usuniesz lub odinstalujesz XAMPP, stracisz dane.",
     "dasboard-backup-li3": "Jeśli stracisz, sformatujesz lub zniszczysz komputer, stracisz dane.",
