--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -402,6 +402,7 @@
     "customers": "Clientes",
     "customize": "Personalizar",
     "daily": "Diário",
+    "daily-executions": "Ejecuciones diarias",
     "dasboard-backup-li1": "Se excluir ou desinstalar o FacturaScripts, perderá os dados.",
     "dasboard-backup-li2": "Se excluir ou desinstalar o XAMPP, perderá os dados.",
     "dasboard-backup-li3": "S",
@@ -980,7 +981,7 @@
     "login": "Entrar",
     "login-cookie-fail": "Cookie de sessão inválido: provavelmente você fez login a partir de outro dispositivo ou navegador.",
     "login-image": "Imagem de login",
-    "login-invalid-db-password": "Contraseña de base de datos incorrecta",
+    "login-invalid-db-password": "Palavra-passe da base de dados incorreta",
     "login-ok": "Login bem-sucedido (cookie). Usuário: '%nick%'",
     "login-password-changed": "Senha alterada com sucesso",
     "login-password-fail": "Usuário ou senha incorretos",
