--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -402,6 +402,7 @@
     "customers": "Clients",
     "customize": "Personalitzar",
     "daily": "A diari",
+    "daily-executions": "Ejecuciones diarias",
     "dasboard-backup-li1": "Si borra o desinstala FacturaScripts, perd els dades.",
     "dasboard-backup-li2": "Si borra o desinstala XAMPP, perd els dades.",
     "dasboard-backup-li3": "Si perd, formata o destrueix l'PC, perd els dades.",
