--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -402,6 +402,7 @@
     "customers": "Les clients",
     "customize": "Personnaliser",
     "daily": "Quotidien",
+    "daily-executions": "Ejecuciones diarias",
     "dasboard-backup-li1": "Si vous supprimez ou désinstallez FacturaScripts, vous perdrez les données.",
     "dasboard-backup-li2": "Si vous supprimez ou désinstallez XAMPP, vous perdrez les données.",
     "dasboard-backup-li3": "Si vous perdez, formatez ou détruisez le PC, vous perdrez les données.",
