--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -402,6 +402,7 @@
     "customers": "clientes",
     "customize": "Personalizar",
     "daily": "Diário",
+    "daily-executions": "Ejecuciones diarias",
     "dasboard-backup-li1": "Se você excluir ou desinstalar o FacturaScripts, perderá os dados.",
     "dasboard-backup-li2": "Se excluir ou desinstalar o XAMPP, perderá os dados.",
     "dasboard-backup-li3": "S",
@@ -732,7 +733,7 @@
     "full-path": "Caminho completo",
     "gap-found": "Foi encontrado um espaço para o número %numero%, dia %fecha%, %codserie% e empresa %idempresa%",
     "gap-found-not-fillable": "Foi encontrado um espaço para o número %numero%, dia %fecha%, %codserie% e empresa %idempresa%, no entanto não será preenchido.",
-    "gaps-out-of-range": "Se han encontrado %count% huecos que no se van a poder rellenar por estar a más de 1000 números del último.",
+    "gaps-out-of-range": "Foram encontradas %count% lacunas que não poderão ser preenchidas por estarem a mais de 1000 números do último.",
     "general": "Geral",
     "general-concepts": "Conceitos Gerais",
     "general-data": "Dados gerais",
@@ -980,7 +981,7 @@
     "login": "Entrar",
     "login-cookie-fail": "Cookie de sessão inválida: provavelmente você fez login a partir de outro dispositivo ou navegador.",
     "login-image": "Imagem de login",
-    "login-invalid-db-password": "Contraseña de base de datos incorrecta",
+    "login-invalid-db-password": "Palavra-passe da base de dados incorreta",
     "login-ok": "Faça o login com sucesso (cookie). Usuário: '0'",
     "login-password-changed": "Senha alterada com sucesso",
     "login-password-fail": "Falha na autenticação",
