Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1756,7 +1756,7 @@
     "type-success": "Tipo correcto",
     "type-warning": "Tipo advertencia",
     "unbalance": "Descuadre",
-    "unbalanced-accounting-entry": "Asiento descuadrado",
+    "unbalanced-accounting-entry": "Nevyvážený účetní zápis",
     "unbalanced-entry": "Nevyrovnaný záznam",
     "unchecked": "No comprobado",
     "under-minimums": "Bajo mínimos",
