--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -402,7 +402,7 @@
     "customers": "Clienti",
     "customize": "personalizzare",
     "daily": "Giornale",
-    "daily-executions": "Ejecuciones diarias",
+    "daily-executions": "Esecuzioni giornaliere",
     "dasboard-backup-li1": "Se si cancella o disinstalla FacturaScripts, si perdono i dati.",
     "dasboard-backup-li2": "Se si cancella o disinstalla XAMPP, si perdono i dati.",
     "dasboard-backup-li3": "Se si perde, formatta o distrugge il PC, si perdono i dati.",
