--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -880,7 +880,7 @@
     "invoices": "Faturas",
     "invoices-cant-generate-new-docs": "As faturas não podem gerar novos documentos",
     "ip": "IP",
-    "ip-banned": "Acesso bloqueado temporariamente a partir do seu IP por motivos de segurança.",
+    "ip-banned": "Por motivos de segurança, o acesso a partir do seu IP foi bloqueado durante 10 minutos.",
     "irpf": "IRPF",
     "irpf-record-not-found": "Registro de IRS %value%% não encontrado.",
     "irpf-subaccount-not-found": "Subconta de IRPF não encontrada",
