Actualizadas las traducciones.

--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1780,7 +1780,7 @@
     "until-hour": "Until hour",
     "until-subaccount": "Until subaccount",
     "update": "Update",
-    "update-docs-address": "Update Open Documents",
+    "update-docs-address": "Update open documents",
     "update-stock": "Update stock",
     "update-supplier-prices": "Update supplier prices",
     "update-time": "Update time",
