--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1298,7 +1298,7 @@
     "predefined-concepts": "Conceitos Predefinidos",
     "preferences": "Preferências",
     "preview": "Pré-visualização",
-    "preview-not-available": "Previsualización no disponible",
+    "preview-not-available": "Pré-visualização não disponível",
     "previous": "Anterior",
     "previous-balance": "Balanço anterior",
     "previous-documents": "Documentos anteriores",
