Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -723,6 +723,7 @@
     "fourth-quarter": "4º trimestre",
     "fourth-trimester": "Quart trimestre",
     "free": "Gratuït",
+    "frequency": "Freqüència",
     "friday": "Divendres",
     "from": "Des de",
     "from-accounting-entry": "Des d'assentament",
