--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -723,6 +723,7 @@
     "fourth-quarter": "Viertes Quartal",
     "fourth-trimester": "viertes Trimester",
     "free": "Kostenlos",
+    "frequency": "Frequenz",
     "friday": "Freitag",
     "from": "von",
     "from-accounting-entry": "von Buchungseintrag",
@@ -843,7 +844,7 @@
     "installation": "Installation",
     "installed": "installiert",
     "installed-plugins": "Installierte Plugins",
-    "installer": "FacturaScripts 2018 (Alpha) Installationsprogramm",
+    "installer": "Installationsprogramm",
     "installer-p": "Willkommen bei FacturaScripts Installer. Füllen Sie die erforderlichen Felder aus, um die Datenbank zu verbinden.",
     "installer-requirements": "Die folgenden Erweiterungen und Funktionen werden für FacturaScripts benötigt:",
     "integrity-check": "Integritätsprüfung",
@@ -1298,7 +1299,7 @@
     "predefined-concepts": "Vordefinierte Konzepte",
     "preferences": "Vorlieben",
     "preview": "Vorschau",
-    "preview-not-available": "Previsualización no disponible",
+    "preview-not-available": "Vorschau nicht verfügbar",
     "previous": "vorherige",
     "previous-balance": "Vorheriger Saldo",
     "previous-documents": "vorherige Dokumente",
