--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -723,6 +723,7 @@
     "fourth-quarter": "4th quarter",
     "fourth-trimester": "Fourth trimester",
     "free": "free",
+    "frequency": "Frequency",
     "friday": "Friday",
     "from": "From",
     "from-accounting-entry": "From entry",
