--- a/Core/Translation/es_UY.json
+++ b/Core/Translation/es_UY.json
@@ -723,6 +723,7 @@
     "fourth-quarter": "4º trimestre",
     "fourth-trimester": "Cuarto trimestre.",
     "free": "Gratis",
+    "frequency": "Frecuencia",
     "friday": "Viernes",
     "from": "Desde",
     "from-accounting-entry": "Desde asiento",
