--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -723,6 +723,7 @@
     "fourth-quarter": "4. hiruhilekoa",
     "fourth-trimester": "Laugarren hiruhilekoa",
     "free": "Doan",
+    "frequency": "Frekentzia",
     "friday": "Ostirala",
     "from": "Nondik",
     "from-accounting-entry": "Idazpenagatik",
