--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -723,6 +723,7 @@
     "fourth-quarter": "4ème trimestre",
     "fourth-trimester": "Quatrième trimestre",
     "free": "libre",
+    "frequency": "Fréquence",
     "friday": "Vendredi",
     "from": "De",
     "from-accounting-entry": "Depuis l'entrée",
