--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -402,7 +402,7 @@
     "customers": "Clientes",
     "customize": "Personalizar",
     "daily": "Diario",
-    "daily-executions": "Ejecuciones diarias",
+    "daily-executions": "Execucións diarias",
     "dasboard-backup-li1": "Si borra o desinstala FacturaScripts, pierde los datos.",
     "dasboard-backup-li2": "Se borra ou desinstala XAMPP, perde os datos.",
     "dasboard-backup-li3": "Se perde, formata ou destrúe o PC, perde os datos.",
@@ -723,6 +723,7 @@
     "fourth-quarter": "4º trimestre",
     "fourth-trimester": "Cuarto trimestre",
     "free": "gratis",
+    "frequency": "Frecuencia",
     "friday": "Venres",
     "from": "Dende",
     "from-accounting-entry": "Dende asento",
@@ -1298,7 +1299,7 @@
     "predefined-concepts": "Conceptos Predefinidos",
     "preferences": "Preferencias",
     "preview": "Previsualizar",
-    "preview-not-available": "Previsualización no disponible",
+    "preview-not-available": "Vista previa non dispoñible",
     "previous": "Anterior",
     "previous-balance": "Balance anterior",
     "previous-documents": "Documentos previos",
