--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -723,6 +723,7 @@
     "fourth-quarter": "4° trimestre",
     "fourth-trimester": "Quarto trimestre",
     "free": "Gratuito",
+    "frequency": "Frequenza",
     "friday": "Venerdì",
     "from": "Da",
     "from-accounting-entry": "dall'ingresso in contabilità",
