--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -602,7 +602,7 @@
     "errors": "Błędy",
     "es_EC": "Hiszpański (Ekwador)",
     "es-operation-tax-added-value": "Operacja podlega VAT",
-    "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
+    "es-operation-tax-ceuta-melilla": "Operacja podlega IPSI (Ceuta i Melilla)",
     "es-operation-tax-igic": "Operacja objęta IGIC (Wyspy Kanaryjskie)",
     "es-operation-tax-other": "Operacja niepodlegająca powyższym podatkom",
     "es-tax-exception-art-14": "Hiszpania: N4 Niepodlegające opodatkowaniu (art. 14 LIVA) – operacje związane z eksportem",
@@ -723,6 +723,7 @@
     "fourth-quarter": "4. kwartał",
     "fourth-trimester": "Czwarty kwartał",
     "free": "Darmowy",
+    "frequency": "Częstotliwość",
     "friday": "Piątek",
     "from": "Od",
     "from-accounting-entry": "Od pozycji",
