--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -723,6 +723,7 @@
     "fourth-quarter": "4t trimestre",
     "fourth-trimester": "Quart trimestre",
     "free": "Gratuït",
+    "frequency": "Frequència",
     "friday": "friday",
     "from": "Des de",
     "from-accounting-entry": "Des d'assentament",
