--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -723,6 +723,7 @@
     "fourth-quarter": "4º trimestre",
     "fourth-trimester": "Cuarto trimestre",
     "free": "Gratis",
+    "frequency": "Frekvence",
     "friday": "Viernes",
     "from": "Desde",
     "from-accounting-entry": "Desde asiento",
