--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -723,6 +723,7 @@
     "fourth-quarter": "4º trimestre",
     "fourth-trimester": "Quarto Trimestre",
     "free": "Grátis",
+    "frequency": "Frequência",
     "friday": "sexta-feira",
     "from": "Desde",
     "from-accounting-entry": "De lançamento",
