Actualizada la versión.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -97,7 +97,7 @@
     "already-installed": "Bereits installiert",
     "already-installed-p": "Das Programm ist bereits installiert",
     "always-to-company-email": "Immer an die Unternehmens-E-Mail",
-    "always-to-config-email": "Siempre al email de la configuración",
+    "always-to-config-email": "Immer an die in der Konfiguration angegebene E-Mail",
     "amount": "Menge",
     "amount-without-discount": "Preis ohne Rabatt",
     "and": "und",
