--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -263,7 +263,7 @@
     "cifnif": "CIF\/NIF",
     "cities": "Städte",
     "city": "Stadt",
-    "clear-filters": "Limpiar filtros",
+    "clear-filters": "Filter löschen",
     "click-link-to-add": "Sie können Dateien aus der Bibliothek im Administratormenü hinzufügen.",
     "clone": "doppeln",
     "clone-account-entry": "Buchungseintrag doppeln",
