--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1377,6 +1377,7 @@
     "receipt": "Ordainagiria",
     "receipt-expense-account": "%document% ordainagiriaren gastuak",
     "receipts": "Ordainagiriak",
+    "receiver": "Receptor",
     "record-deleted-correctly": "Erregistroa ondo ezabatu da!",
     "record-deleted-error": "Errorea errejistroa ezabatzean",
     "record-not-found": "Ez da erregistroa aurkitu",
