--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1377,6 +1377,7 @@
     "receipt": "Recibo",
     "receipt-expense-account": "Gastos no recibo %document%",
     "receipts": "Recibos",
+    "receiver": "Receptor",
     "record-deleted-correctly": "Rexistro borrado correctamente",
     "record-deleted-error": "Erro ao eliminar o rexistro",
     "record-not-found": "Rexistro non atopado",
