--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1377,6 +1377,7 @@
     "receipt": "Paragon",
     "receipt-expense-account": "Wydatki w pokwitowaniu %document%",
     "receipts": "Paragony",
+    "receiver": "Odbiorca",
     "record-deleted-correctly": "Rekord został poprawnie usunięty!",
     "record-deleted-error": "Błąd podczas usuwania rekordu",
     "record-not-found": "Nie znaleziono rekordu",
