--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1377,6 +1377,7 @@
     "receipt": "recibo",
     "receipt-expense-account": "Gastos no recibo %document%",
     "receipts": "Recibos",
+    "receiver": "Recetor",
     "record-deleted-correctly": "Registro eliminado corretamente!",
     "record-deleted-error": "Erro ao excluir o registro",
     "record-not-found": "Registro não encontrado",
