--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1377,6 +1377,7 @@
     "receipt": "Rebut",
     "receipt-expense-account": "Despeses en el rebut %document%",
     "receipts": "Rebuts",
+    "receiver": "Receptor",
     "record-deleted-correctly": "¡Registre eliminat correctament!",
     "record-deleted-error": "S'ha produït un erro al eliminar el registre",
     "record-not-found": "No s'ha trobat el registre",
