--- a/Core/Translation/es_DO.json
+++ b/Core/Translation/es_DO.json
@@ -1377,6 +1377,7 @@
     "receipt": "Recibo",
     "receipt-expense-account": "Gastos en el recibo %document%",
     "receipts": "Recibos",
+    "receiver": "Receptor",
     "record-deleted-correctly": "¡Registro eliminado correctamente!",
     "record-deleted-error": "Error al eliminar el registro",
     "record-not-found": "Registro no encontrado",
