Actualizadas las traducciones.

--- a/Core/Translation/es_UY.json
+++ b/Core/Translation/es_UY.json
@@ -531,7 +531,7 @@
     "dont-sell-above-pvp": "No vender por encima de PVP",
     "dont-sell-below-cost": "No puede vender por debajo del costo.",
     "download": "Descargar",
-    "download-completed": "Descargar completada",
+    "download-completed": "Descarga completada",
     "download-error": "Error al descargar. Código %status% - %error% %body%",
     "download-xml": "Descargar XML",
     "downloads": "Descargas",
