--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1782,7 +1782,7 @@
     "until-hour": "Godzina końcowa",
     "until-subaccount": "Do subkonta",
     "update": "Aktualizować",
-    "update-docs-address": "Actualizar documentos abiertos",
+    "update-docs-address": "Zaktualizuj otwarte dokumenty",
     "update-stock": "Aktualizuj zapasy",
     "update-supplier-prices": "Aktualizacja cen dostawców",
     "update-time": "Czas aktualizacji",
