--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -615,7 +615,7 @@
     "es-tax-exception-e6": "E",
     "es-tax-exception-location-rules": "Espanha: N2 Não sujeita – Regras de localização de serviços (arts. 69–70 LIVA, serviços B2B UE ou fora da UE)",
     "es-tax-exception-n1": "Operações internas isentas ao abrigo do artigo 10.1 da Lei 20\/1991 do IGIC",
-    "es-tax-exception-n5": "es-tax-exception-n5",
+    "es-tax-exception-n5": "Operações isentas por aplicação do artigo 25 da Lei do IGIC",
     "es-tax-exception-passive-subject": "Espanha: N6 Inversão do sujeito passivo (art. 84 LIVA)",
     "es-tax-regime-agrarian": "R",
     "es-tax-regime-cash-criteria": "Criterio de caixa",
@@ -1299,7 +1299,7 @@
     "predefined-concepts": "Conceitos Predefinidos",
     "preferences": "Preferências",
     "preview": "Pré-visualizar",
-    "preview-not-available": "Previsualización no disponible",
+    "preview-not-available": "Pré-visualização não disponível",
     "previous": "Anterior",
     "previous-balance": "Balanço anterior",
     "previous-documents": "Documentos anteriores",
