--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -844,7 +844,7 @@
     "installation": "Instal·lació",
     "installed": "Instalat",
     "installed-plugins": "Complements instalats",
-    "installer": "Instal·lador de FacturaScripts 2018",
+    "installer": "Instal·lador",
     "installer-p": "Benvingut a l'instalador de FacturaScripts. Ompli els camps necessaris per a conectar en la base de senyes.",
     "installer-requirements": "FacturaScripts necessita les següents extensions i funcions:",
     "integrity-check": "Comprovar l'integritat",
@@ -1559,7 +1559,7 @@
     "sort": "Orde",
     "sort-by-balance-asc": "Ordenar per saldo ascendent",
     "sort-by-balance-desc": "Ordenar per saldo descendent",
-    "sort-by-code-asc": "Ordenar por código ascendente",
+    "sort-by-code-asc": "Ordenar per codi ascendent",
     "sort-by-code-desc": "Ordenar por código descendente",
     "sort-by-column": "Ordenar per columna",
     "sort-by-credit-asc": "Ordenar per haver ascendent",
@@ -1615,7 +1615,7 @@
     "subaccount-belongs-other-year": "El subcompte %subAccountCode% pertany a un altre eixercici.",
     "subaccount-irpf": "Compte per a les retencions",
     "subaccount-irpf-creditor": "Subcompte de retencions per a compres",
-    "subaccount-not-found": "No s'ha trobar el subconte %subAccountCode%.",
+    "subaccount-not-found": "Subcompte %code% no trobat.",
     "subaccount-purchases": "Conte per a les compres",
     "subaccount-pyg-not-found": "Subcompte de pèrdues i guanys no trobada",
     "subaccount-sales": "Conte per a les vendes",
