--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -603,7 +603,7 @@
     "es_EC": "Espainiako gaztelania (Ekuador)",
     "es-operation-tax-added-value": "BEZaren mende dagoen eragiketa",
     "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
-    "es-operation-tax-igic": "es-operation-tax-igic",
+    "es-operation-tax-igic": "IGICaren mende dagoen eragiketa (Kanaria Uharteak)",
     "es-operation-tax-other": "es-operation-tax-other",
     "es-tax-exception-art-14": "Espainia: N4 Art. 14 LIVA – ez dago zerga-subjektuan (esportazioekin lotutako eragiketak)",
     "es-tax-exception-art-7": "es-tax-exception-art-7",
