Actualizadas las traducciones.

--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1299,7 +1299,7 @@
     "predefined-concepts": "Concetti Predefiniti",
     "preferences": "Preferencias",
     "preview": "Anteprima",
-    "preview-not-available": "Previsualización no disponible",
+    "preview-not-available": "Anteprima non disponibile",
     "previous": "precedente",
     "previous-balance": "Saldo precedente",
     "previous-documents": "Documenti precedenti",
