--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -402,7 +402,7 @@
     "customers": "Clientes",
     "customize": "Personalizar",
     "daily": "Diário",
-    "daily-executions": "Ejecuciones diarias",
+    "daily-executions": "Execuções diárias",
     "dasboard-backup-li1": "Se excluir ou desinstalar o FacturaScripts, perderá os dados.",
     "dasboard-backup-li2": "Se excluir ou desinstalar o XAMPP, perderá os dados.",
     "dasboard-backup-li3": "S",
