Actualizadas las traducciones.

--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -402,7 +402,7 @@
     "customers": "Klienci",
     "customize": "Dostosować",
     "daily": "Codziennie",
-    "daily-executions": "Ejecuciones diarias",
+    "daily-executions": "Codzienne wykonania",
     "dasboard-backup-li1": "Jeśli usuniesz lub odinstalujesz FacturaScripts, stracisz dane.",
     "dasboard-backup-li2": "Jeśli usuniesz lub odinstalujesz XAMPP, stracisz dane.",
     "dasboard-backup-li3": "Jeśli stracisz, sformatujesz lub zniszczysz komputer, stracisz dane.",
@@ -876,7 +876,7 @@
     "invoice-receipts-diff": "Istnieje różnica (%diff%) pomiędzy kwotą faktury a sumą jej paragonów.",
     "invoice-regularized-cant-change-date": "Faktura znajduje się w ramach regulacji %tax%. Daty nie można zmienić.",
     "invoice-regularized-cant-delete": "Faktura jest w trakcie regulacji %tax% Nie można jej usunąć.",
-    "invoice-without-acc-entry": "Faktura bez wpisu",
+    "invoice-without-acc-entry": "Faktura bez zapisu księgowego",
     "invoiced": "Fakturowane",
     "invoices": "Faktury",
     "invoices-cant-generate-new-docs": "Faktury nie mogą generować nowych dokumentów",
