--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -97,7 +97,7 @@
     "already-installed": "Já instalado",
     "already-installed-p": "O programa já está instalado",
     "always-to-company-email": "Sempre para o e-mail da empresa",
-    "always-to-config-email": "Sempre para o e-mail da configuração",
+    "always-to-config-email": "Sempre para o e-mail de configuração",
     "amount": "Valor",
     "amount-without-discount": "preço sem desconto",
     "and": "e",
