Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -188,8 +188,6 @@
     "cache": "Caché",
     "cache-dir": "Carpeta de memòria cau '%folderName%'",
     "calculate": "Calcular",
-    "calculated-net-diff": "Diferència trobada en calcular el net. %net% VS %net2%",
-    "calculated-surcharge-diff": "Diferència trobada en calcular el recàrrec d'equivalència. %surcharge% VS %surcharge2%",
     "calculated-tax-diff": "Diferència trobada en calcular el total dIVA. %tax% VS %tax2%",
     "calculation": "Càlcul",
     "calendar": "Calendari",
@@ -263,6 +261,7 @@
     "cifnif": "CIF\/NIF",
     "cities": "Ciutats",
     "city": "Ciutat",
+    "classic-tax-method": "Clàssic",
     "clear-filters": "Netejar filtres",
     "click-link-to-add": "Clic en l'enllaç (a dalt) per a afegir",
     "clone": "Duplicar",
@@ -1307,6 +1306,7 @@
     "previously-purchased-from-supplier": "Comprat anteriorment al proveïdor",
     "previously-sold-to-customer": "Venut anteriorment al client",
     "price": "Preu",
+    "price-adjusted-tax-method": "Ajustat a preus amb impostos",
     "price-with-tax": "Preu + impostos",
     "principal": "Principal",
     "print": "Imprimir",
@@ -1677,6 +1677,7 @@
     "tax-area": "Área fiscal",
     "tax-areas": "Àrees fiscals",
     "tax-base": "Base imposable",
+    "tax-calculation-method": "Mètode càlcul impostos",
     "tax-credit-account": "Compte de crèdit per a impostos",
     "tax-debit-account": "Compte de dèbit per a impostos",
     "tax-transport": "Impostos del transport",
