--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -188,8 +188,6 @@
     "cache": "Cache-Speicher",
     "cache-dir": "Cache-Verzeichnis '0'",
     "calculate": "kalkulieren",
-    "calculated-net-diff": "Differenz gefunden bei der Berechnung des Netto. %net% vs %net2%",
-    "calculated-surcharge-diff": "Differenz gefunden bei der Berechnung des Pauschalbetrags. %surcharge% vs %surcharge2%",
     "calculated-tax-diff": "Differenz gefunden bei der Berechnung der Gesamt-UST. %tax% vs %tax2%",
     "calculation": "Kalkulation",
     "calendar": "Kalendar",
@@ -263,6 +261,7 @@
     "cifnif": "CIF\/NIF",
     "cities": "Städte",
     "city": "Stadt",
+    "classic-tax-method": "Clásico",
     "clear-filters": "Filter löschen",
     "click-link-to-add": "Sie können Dateien aus der Bibliothek im Administratormenü hinzufügen.",
     "clone": "doppeln",
@@ -1307,6 +1306,7 @@
     "previously-purchased-from-supplier": "Früher vom Lieferanten gekauft",
     "previously-sold-to-customer": "Zuvor an den Kunden verkauft",
     "price": "Preis",
+    "price-adjusted-tax-method": "Ajustado a precio con impuestos",
     "price-with-tax": "Preis + Steuer",
     "principal": "Main",
     "print": "Drucken",
@@ -1677,6 +1677,7 @@
     "tax-area": "Steuerbereich",
     "tax-areas": "Steuerzonen",
     "tax-base": "Steuerbemessungsgrundlage",
+    "tax-calculation-method": "Método cálculo impuestos",
     "tax-credit-account": "Steuergutschriftkonto",
     "tax-debit-account": "Steuerlastschriftkonto",
     "tax-transport": "Steuerverkehr",
