--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -188,8 +188,6 @@
     "cache": "Cache",
     "cache-dir": "Cache-aren karpeta '%folderName%'",
     "calculate": "Kalkulatu",
-    "calculated-net-diff": "Aurkitu den desberdinotasuna netoa kalkulatzean. %net% VS %net2%",
-    "calculated-surcharge-diff": "Aurkitu den desberdinotasuna kargatzeko suplementua kalkulatzean. %surcharge% VS %surcharge2%",
     "calculated-tax-diff": "Aurkitu den desberdinotasuna IVA osoa kalkulatzean. %tax% VS %tax2%",
     "calculation": "Kalkulua",
     "calendar": "Egutegia",
@@ -263,6 +261,7 @@
     "cifnif": "IFK\/IFZ",
     "cities": "Hiriak",
     "city": "Hiria",
+    "classic-tax-method": "Clásico",
     "clear-filters": "Iragazkiak garbitu",
     "click-link-to-add": "Liburutegitik ahal dituzu artxiboak gehitu, administratzaile menuan.",
     "clone": "Bikoiztu",
@@ -1307,6 +1306,7 @@
     "previously-purchased-from-supplier": "Aurretik hornitzaileari erosia",
     "previously-sold-to-customer": "Aurretik bezeroari salduta",
     "price": "Prezioa",
+    "price-adjusted-tax-method": "Ajustado a precio con impuestos",
     "price-with-tax": "Prezioa + zergak",
     "principal": "Nagusia",
     "print": "Inprimatu",
@@ -1677,6 +1677,7 @@
     "tax-area": "zerga gunea",
     "tax-areas": "Zerga guneak",
     "tax-base": "Zerga oinarria",
+    "tax-calculation-method": "Método cálculo impuestos",
     "tax-credit-account": "Zergen hartzekodun kontua",
     "tax-debit-account": "Zergen zordun kontua",
     "tax-transport": "Garraioaren zergak",
