--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -188,8 +188,6 @@
     "cache": "Cache",
     "cache-dir": "Cache répertoire '%folderName%'",
     "calculate": "Calculer",
-    "calculated-net-diff": "Différence trouvée en calculant le net. %net% VS %net2%",
-    "calculated-surcharge-diff": "Différence trouvée en calculant le supplément de surcharge. %surcharge% VS %surcharge2%",
     "calculated-tax-diff": "Différence trouvée en calculant le total de la TVA. %tax% VS %tax2%",
     "calculation": "Calcul",
     "calendar": "Calendrier",
@@ -263,6 +261,7 @@
     "cifnif": "CIF \/ NIF",
     "cities": "Villes",
     "city": "Ville",
+    "classic-tax-method": "Clásico",
     "clear-filters": "Effacer les filtres",
     "click-link-to-add": "Vous pouvez ajouter des fichiers à la bibliothèque, depuis le menu Administration",
     "clone": "Cloner",
@@ -1307,6 +1306,7 @@
     "previously-purchased-from-supplier": "Déjà acheté auprès d'un fournisseur",
     "previously-sold-to-customer": "Déjà vendu au client",
     "price": "Prix",
+    "price-adjusted-tax-method": "Ajustado a precio con impuestos",
     "price-with-tax": "Prix TTC",
     "principal": "Principale",
     "print": "Impression",
@@ -1677,6 +1677,7 @@
     "tax-area": "Zone fiscale",
     "tax-areas": "Zones fiscales",
     "tax-base": "Assiette fiscale",
+    "tax-calculation-method": "Método cálculo impuestos",
     "tax-credit-account": "Compte créditeur pour l'imposition",
     "tax-debit-account": "Compte débiteur pour l'imposition",
     "tax-transport": "Transport fiscal",
