--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -188,8 +188,6 @@
     "cache": "nascondiglio",
     "cache-dir": "Directory cache '0'",
     "calculate": "Calcolare",
-    "calculated-net-diff": "Differenza trovata nel calcolare il netto. %net% VS %net2%",
-    "calculated-surcharge-diff": "Differenza trovata nel calcolare il sovrapprezzo. %surcharge% VS %surcharge2%",
     "calculated-tax-diff": "Differenza trovata nel calcolare l'IVA totale. %tax% VS %tax2%",
     "calculation": "calcolo",
     "calendar": "calendario",
@@ -263,6 +261,7 @@
     "cifnif": "CIF\/NIF",
     "cities": "Città",
     "city": "Città",
+    "classic-tax-method": "Clásico",
     "clear-filters": "Pulire il filttro",
     "click-link-to-add": "Fare clic sul link per aggiungere",
     "clone": "Duplicare",
@@ -1307,6 +1306,7 @@
     "previously-purchased-from-supplier": "Acquistato in precedenza dal fornitore",
     "previously-sold-to-customer": "Venduto precedentemente al cliente",
     "price": "Prezzo",
+    "price-adjusted-tax-method": "Ajustado a precio con impuestos",
     "price-with-tax": "Prezzo + tasse",
     "principal": "Principale",
     "print": "Stampare",
@@ -1677,6 +1677,7 @@
     "tax-area": "Area fiscale",
     "tax-areas": "aree fiscali",
     "tax-base": "Base Imponibile",
+    "tax-calculation-method": "Método cálculo impuestos",
     "tax-credit-account": "Conto di credito per tasse",
     "tax-debit-account": "Conto addebito per tasse",
     "tax-transport": "Trasporto fiscale",
