--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -188,8 +188,6 @@
     "cache": "Pamięć podręczna",
     "cache-dir": "Folder pamięci podręcznej '%folderName%'",
     "calculate": "Oblicz",
-    "calculated-net-diff": "Znaleziono różnicę podczas obliczania netto. %net% VS %net2%",
-    "calculated-surcharge-diff": "Znaleziono różnicę podczas obliczania opłaty równowartości. %surcharge% VS %surcharge2%",
     "calculated-tax-diff": "Znaleziono różnicę podczas obliczania całkowitego VATu. %tax% VS %tax2%",
     "calculation": "Obliczenie",
     "calendar": "Kalendarz",
@@ -263,6 +261,7 @@
     "cifnif": "CIF\\\/NIF",
     "cities": "Miasta",
     "city": "Miasto",
+    "classic-tax-method": "Clásico",
     "clear-filters": "Wyczyść filtry",
     "click-link-to-add": "Możesz dodać pliki z biblioteki w menu administratora.",
     "clone": "Duplikuj",
@@ -1307,6 +1306,7 @@
     "previously-purchased-from-supplier": "Zakupione wcześniej od dostawcy",
     "previously-sold-to-customer": "Sprzedano wcześniej klientowi",
     "price": "Cena",
+    "price-adjusted-tax-method": "Ajustado a precio con impuestos",
     "price-with-tax": "Cena + podatki",
     "principal": "Główny",
     "print": "Drukuj",
@@ -1677,6 +1677,7 @@
     "tax-area": "Obszar podatkowy",
     "tax-areas": "Obszary podatkowe",
     "tax-base": "Podstawa opodatkowania",
+    "tax-calculation-method": "Método cálculo impuestos",
     "tax-credit-account": "Konto kredytowe do podatków",
     "tax-debit-account": "Konto debetowe do podatków",
     "tax-transport": "Podatki od transportu",
