--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -188,8 +188,6 @@
     "cache": "Cache",
     "cache-dir": "Cache directory '%folderName%'",
     "calculate": "Calculate",
-    "calculated-net-diff": "Difference found when calculating the net. %net% VS %net2%",
-    "calculated-surcharge-diff": "Difference found when calculating the equivalence surcharge. %surcharge% VS %surcharge2%",
     "calculated-tax-diff": "Difference found when calculating the total VAT. %tax% VS %tax2%",
     "calculation": "Calculation",
     "calendar": "Calendar",
@@ -263,6 +261,7 @@
     "cifnif": "TIC\/TIN",
     "cities": "Cities",
     "city": "City",
+    "classic-tax-method": "Classic",
     "clear-filters": "Clear Filters",
     "click-link-to-add": "You can add files from the library, in the administrator menu",
     "clone": "Clone",
@@ -1307,6 +1306,7 @@
     "previously-purchased-from-supplier": "Previously purchased from supplier",
     "previously-sold-to-customer": "Previously purchased to customer",
     "price": "Price",
+    "price-adjusted-tax-method": "Price-adjusted (tax included)",
     "price-with-tax": "Price with tax",
     "principal": "Main",
     "print": "Print",
@@ -1677,6 +1677,7 @@
     "tax-area": "Tax area",
     "tax-areas": "Tax areas",
     "tax-base": "Tax base",
+    "tax-calculation-method": "Tax calculation method",
     "tax-credit-account": "Credit account for taxes",
     "tax-debit-account": "Debit account for taxes",
     "tax-transport": "Tax transport",
