--- a/Core/Translation/es_PE.json
+++ b/Core/Translation/es_PE.json
@@ -188,8 +188,6 @@
     "cache": "Caché",
     "cache-dir": "Carpeta de cache '%folderName%'",
     "calculate": "Calcular",
-    "calculated-net-diff": "Diferencia encontrada al calcular el neto. %net% VS %net2%",
-    "calculated-surcharge-diff": "Diferencia encontrada al calcular el recargo de equivalencia. %surcharge% VS %surcharge2%",
     "calculated-tax-diff": "Diferencia encontrada al calcular el total de IVA. %tax% VS %tax2%",
     "calculation": "Cálculo",
     "calendar": "Calendario",
@@ -263,6 +261,7 @@
     "cifnif": "DNI\/RUC",
     "cities": "Ciudades",
     "city": "Ciudad",
+    "classic-tax-method": "Clásico",
     "clear-filters": "Limpiar filtros",
     "click-link-to-add": "Puede añadir archivos desde la biblioteca, en el menú administrador.",
     "clone": "Duplicar",
@@ -1307,6 +1306,7 @@
     "previously-purchased-from-supplier": "Comprado anteriormente al proveedor",
     "previously-sold-to-customer": "Vendido anteriormente al cliente",
     "price": "Precio",
+    "price-adjusted-tax-method": "Ajustado a precio con impuestos",
     "price-with-tax": "Precio + impuestos",
     "principal": "Principal",
     "print": "Imprimir",
@@ -1677,6 +1677,7 @@
     "tax-area": "Zona de impuestos",
     "tax-areas": "Zonas de impuestos",
     "tax-base": "Base Imponible",
+    "tax-calculation-method": "Método cálculo impuestos",
     "tax-credit-account": "Cuenta de crédito para impuestos",
     "tax-debit-account": "Cuenta de débito para impuestos",
     "tax-transport": "Impuestos del transporte",
