--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -188,8 +188,6 @@
     "cache": "Caché",
     "cache-dir": "Cartafol da caché \"% item%\"",
     "calculate": "Calcular",
-    "calculated-net-diff": "Diferenza atopada ó calcular o neto. %net% VS %net2%",
-    "calculated-surcharge-diff": "Diferenza atopada ó calcular o recargo de equivalencia. %surcharge% VS %surcharge2%",
     "calculated-tax-diff": "Diferenza atopada ó calcular o total do IVE. %tax% VS %tax2%",
     "calculation": "Cálculo",
     "calendar": "Calendario",
@@ -263,6 +261,7 @@
     "cifnif": "CIF \/ NIF",
     "cities": "Cidades",
     "city": "Cidade",
+    "classic-tax-method": "Clásico",
     "clear-filters": "Limpar filtros",
     "click-link-to-add": "Pode engadir arquivos desde a biblioteca, no menú administrador.",
     "clone": "Duplicar",
@@ -1307,6 +1306,7 @@
     "previously-purchased-from-supplier": "Comprado anteriormente ao provedor",
     "previously-sold-to-customer": "Vendido anteriormente ao cliente",
     "price": "Prezo",
+    "price-adjusted-tax-method": "Ajustado a precio con impuestos",
     "price-with-tax": "prezo con impostos",
     "principal": "Principal",
     "print": "Imprimir",
@@ -1677,6 +1677,7 @@
     "tax-area": "Zona de impostos",
     "tax-areas": "zonas de impostos",
     "tax-base": "Base Impoñible",
+    "tax-calculation-method": "Método cálculo impuestos",
     "tax-credit-account": "Conta de crédito para impostos",
     "tax-debit-account": "Conta de débito para impostos",
     "tax-transport": "Transporte tributario",
