--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -188,8 +188,6 @@
     "cache": "Cache",
     "cache-dir": "Diretório de cache '%folderName%'",
     "calculate": "Calcular",
-    "calculated-net-diff": "Diferença encontrada ao calcular o líquido. %net% VS %net2%",
-    "calculated-surcharge-diff": "Diferença encontrada ao calcular a sobretaxa de equivalência. %surcharge% VS %surcharge2%",
     "calculated-tax-diff": "Diferença encontrada ao calcular o total do IVA. %tax% VS %tax2%",
     "calculation": "Cálculo",
     "calendar": "Calendário",
@@ -263,6 +261,7 @@
     "cifnif": "CIF\/NIF",
     "cities": "cidades",
     "city": "Cidade",
+    "classic-tax-method": "Clásico",
     "clear-filters": "Limpar filtros",
     "click-link-to-add": "haz-clic-en-el-enlace-para-agregar",
     "clone": "Duplicar",
@@ -1307,6 +1306,7 @@
     "previously-purchased-from-supplier": "Comprado anteriormente ao fornecedor",
     "previously-sold-to-customer": "Vendido anteriormente ao cliente",
     "price": "Preço",
+    "price-adjusted-tax-method": "Ajustado a precio con impuestos",
     "price-with-tax": "preço-com-imposto",
     "principal": "Principal",
     "print": "Imprimir",
@@ -1677,6 +1677,7 @@
     "tax-area": "Área de impostos",
     "tax-areas": "Áreas de impostos",
     "tax-base": "Base Tributável",
+    "tax-calculation-method": "Método cálculo impuestos",
     "tax-credit-account": "Conta de crédito para impostos",
     "tax-debit-account": "Conta de débito para impostos",
     "tax-transport": "Impostos do transporte",
