--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -188,8 +188,6 @@
     "cache": "Caché",
     "cache-dir": "Carpeta de la caché '%folderName%'",
     "calculate": "Calcular",
-    "calculated-net-diff": "Diferència trobada en calcular el net. %net% VS %net2%",
-    "calculated-surcharge-diff": "Diferència trobada en calcular el recàrrec d'equivalència. %surcharge% VS %surcharge2%",
     "calculated-tax-diff": "Diferència trobada en calcular el total de l'IVA. %tax% VS %tax2%",
     "calculation": "Càlcul",
     "calendar": "Calendari",
@@ -263,7 +261,8 @@
     "cifnif": "CIF \/ NIF",
     "cities": "Ciutats",
     "city": "Ciutat",
-    "clear-filters": "Limpiar filtros",
+    "classic-tax-method": "Clàssic",
+    "clear-filters": "Netejar filtres",
     "click-link-to-add": "Faça clic en l'enllaç (a dalt) per a afegir",
     "clone": "Duplicar",
     "clone-account-entry": "Duplicar l'assentament contable",
@@ -1307,6 +1306,7 @@
     "previously-purchased-from-supplier": "Comprat anteriorment al proveïdor",
     "previously-sold-to-customer": "Venut anteriorment al client",
     "price": "Preu",
+    "price-adjusted-tax-method": "Ajustat a preu amb impostos",
     "price-with-tax": "Preu + impostos",
     "principal": "Principal",
     "print": "Imprimir",
@@ -1677,6 +1677,7 @@
     "tax-area": "Zona d'imposts",
     "tax-areas": "Zones d'imposts",
     "tax-base": "Base imponible",
+    "tax-calculation-method": "Método cálculo impuestos",
     "tax-credit-account": "Conte de crèdit per als imposts",
     "tax-debit-account": "Conte de dèbit per als imposts",
     "tax-transport": "Imposts del transport",
@@ -1782,7 +1783,7 @@
     "until-hour": "Hora fi",
     "until-subaccount": "Fins a subcompte",
     "update": "Actualitza",
-    "update-docs-address": "Actualizar documentos abiertos",
+    "update-docs-address": "Actualitzar documents oberts",
     "update-stock": "Actualitza l'estoc",
     "update-supplier-prices": "update-supplier-prices",
     "update-time": "Hora de l'actualització",
